deploy/k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: continumm-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: continumm-grafana
  template:
    metadata:
      labels:
        app: continumm-grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.2.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana
            - name: grafana-provisioning
              mountPath: /etc/grafana/provisioning
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: grafana-provisioning
          configMap:
            name: continumm-grafana-provisioning
            items:
              - key: datasources.yaml
                path: datasources/prometheus.yml
              - key: dashboards.yaml
                path: dashboards/dashboard.yml
              - key: continumm-backend.json
                path: dashboards/continumm-backend.json
              - key: continumm-network.json
                path: dashboards/continumm-network.json
