deploy/k8s/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
spec:
  type: ClusterIP
  selector:
    app: alertmanager
  ports:
    - name: http
      port: 9093
      targetPort: 9093
