deploy/k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: continumm-grafana
spec:
  type: ClusterIP
  selector:
    app: continumm-grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
