deploy/k8s/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
spec:
  type: ClusterIP
  selector:
    app: node-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
